<?xml version="1.0"?>
<package>
  <name>jackal_firmware_ms</name>
  <version>0.4.1</version>
  <description>Firmware for Jackal's microcontroller.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>Clearpath Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>zadig</run_depend>
  <run_depend>dfu-util</run_depend>
  <export>
  </export>
</package>
