<?xml version="1.0"?>
<package>
  <name>jackal_firmware_ms</name>
  <version>0.0.0</version>
  <description>Jackal's microcontroller firmware for Windows.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
